--- a/Calculatingpi.ipynb
+++ b/Calculatingpi.ipynb
@@ -149,11 +149,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "some changes in the file"
+   ]
   }
  ],
  "metadata": {
